solve my overflow issue

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,4 +1,5 @@
 .page {
+  overflow-x: hidden;
   font-family: "Inter", sans-serif;
   font-size: 16px;
   font-weight: 400;
